--- a/public/style/main.css
+++ b/public/style/main.css
@@ -3093,44 +3093,44 @@ fieldset:disabled a.btn {
 
 .btn-info {
     color: #fff;
-    background-color: #17a2b8;
-    border-color: #17a2b8;
+    background-color: #d4471c;
+    border-color: #d4471c;
 }
 
 .btn-info:hover {
     color: #fff;
-    background-color: #138496;
-    border-color: #117a8b;
+    background-color: #d4471c;
+    border-color: #d4471c;
 }
 
 .btn-info:focus,
 .btn-info.focus {
     color: #fff;
-    background-color: #138496;
-    border-color: #117a8b;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+    background-color: #d4471c;
+    border-color: #d4471c;
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(233, 75, 12, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(233, 75, 12, 0.5);
 }
 
 .btn-info.disabled,
 .btn-info:disabled {
     color: #fff;
-    background-color: #17a2b8;
-    border-color: #17a2b8;
+    background-color: #d4471c;
+    border-color: #d4471c;
 }
 
 .btn-info:not(:disabled):not(.disabled):active,
 .btn-info:not(:disabled):not(.disabled).active,
 .show > .btn-info.dropdown-toggle {
     color: #fff;
-    background-color: #117a8b;
-    border-color: #10707f;
+    background-color: #d4471c;
+    border-color: #d4471c;
 }
 
 .btn-info:not(:disabled):not(.disabled):active:focus,
 .btn-info:not(:disabled):not(.disabled).active:focus,
 .show > .btn-info.dropdown-toggle:focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(173, 81, 53, 0.5);
     box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
 }
 
@@ -3421,14 +3421,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info {
-    color: #17a2b8;
-    border-color: #17a2b8;
+    color: #d4471c;
+    border-color: #d4471c;
 }
 
 .btn-outline-info:hover {
     color: #fff;
-    background-color: #17a2b8;
-    border-color: #17a2b8;
+    background-color: #d4471c;
+    border-color: #d4471c;
 }
 
 .btn-outline-info:focus,
@@ -5732,7 +5732,7 @@ input[type="button"].btn-block {
     padding: 0.5rem 0.75rem;
     margin-left: -1px;
     line-height: 1.25;
-    color: #007bff;
+    color: #39a9cb;
     background-color: #fff;
     border: 1px solid #dee2e6;
 }
@@ -5766,8 +5766,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #39a9cb;
+    border-color: #39a9cb;
 }
 
 .page-item.disabled .page-link {
@@ -5861,7 +5861,7 @@ a.badge:focus {
 
 .badge-primary {
     color: #fff;
-    background-color: #007bff;
+    background-color: #39a9cb;
 }
 
 a.badge-primary:hover,
@@ -11282,13 +11282,13 @@ body {
 }
 
 footer {
-    background-color: #7cb2ec;
-    border-top: 2px solid #07153d;
+    background-color: #3155e9;
+    border-top: 1px solid #273791;
     margin-top: 100px;
 }
 
 footer p {
-    color: #051f68;
+    color: #e3e4ec;
 }
 
 .form-control {
@@ -11331,7 +11331,7 @@ footer p {
 }
 
 .navbar-fixed-top.scrolled {
-    background-color: #d36a41 !important;
+    background-color: #2f8de6 !important;
     -webkit-transition: background-color 300ms linear;
     transition: background-color 200ms linear;
 }
@@ -11641,15 +11641,16 @@ footer p {
 }
 
 .page-dashboard #page-content-wrapper {
-    background: #f5f5fb;
+    background: #f5f5f5;
     min-width: 100vw;
 }
 
 .page-dashboard #sidebar-wrapper {
+    background: #bee5eb;
     margin-top: 60px;
     min-height: 100vh;
     margin-left: -15rem;
-    -webkit-transition: margin 0.25s ease-out;
+    -webkit-transition: margin 0.5s ease-out;
     transition: margin 0.25s ease-out;
 }
 
@@ -11668,7 +11669,7 @@ footer p {
 
 .page-dashboard .navbar-store {
     margin-top: 0;
-    background-color: #f5f5fb;
+    background-color: #f5f5f5;
     -webkit-box-shadow: 0px 4px 5px #cacad1;
     box-shadow: 0px 4px 5px #cacad1;
 }
@@ -11682,9 +11683,9 @@ footer p {
 }
 
 .page-dashboard .list-group-item {
-    border: 0;
+    border: 1;
     font-size: 16px;
-    color: #c5c5c5;
+    color: #158eb3;
 }
 
 .page-dashboard .list-group-item.active {
@@ -11697,10 +11698,10 @@ footer p {
     );
     background: linear-gradient(
         270deg,
-        rgba(255, 113, 88, 0.32) 2%,
+        rgba(88, 216, 255, 0.32) 5%,
         rgba(255, 255, 255, 0) 100%
     );
-    border-right: 4px solid #ff7158;
+    border-right: 4px solid #18b9eb;
     color: #0c0d36;
 }
 
@@ -11881,13 +11882,13 @@ footer p {
 
 .card .dashboard-card-title {
     font-size: 16px;
-    color: #c5c5c5;
+    color: #ffffff;
 }
 
 .card .dashboard-card-subtitle {
     font-weight: 600;
     font-size: 32px;
-    color: #0c0d36;
+    color: #ffffff;
 }
 
 .card-list {
@@ -11917,7 +11918,7 @@ footer p {
 .card-dashboard-product .card-body .product-category {
     font-size: 16px;
     line-height: 24px;
-    color: #c5c5c5;
+    color: #0e0d0d;
 }
 
 .slide-fade-enter-active {
