feat: dropdown menu

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -11780,6 +11780,15 @@ footer p {
     right: 0;
 }
 
+.sidebar-dropdown {
+    display: inline-block;
+    text-decoration: none;
+}
+
+.sidebar-submenu {
+    display: none;
+}
+
 .store-breadcrumbs .breadcrumb {
     background: transparent;
     padding: 0;
