--- a/public/style/main.css
+++ b/public/style/main.css
@@ -11369,7 +11369,7 @@ footer p {
 }
 
 .page-details .store-heading h1 {
-    font-size: 24px;
+    font-size: 30px;
     line-height: 36px;
     margin-bottom: 0px;
     color: #0c0d36;
@@ -11377,24 +11377,22 @@ footer p {
 
 .page-details .store-heading .owner {
     font-weight: 200;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 21px;
     color: #979797;
     margin-bottom: 8px;
 }
 
 .page-details .store-heading .price {
-
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 27px;
-  color: #ff7158;
-  margin-bottom: 10px;
-
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 27px;
+    color: #ff7158;
+    margin-bottom: 10px;
 }
 .page-details .store-heading .stock {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 13px;
     line-height: 27px;
     color: rgb(71, 71, 71);
     margin-bottom: 10px;
@@ -11402,9 +11400,8 @@ footer p {
     font-weight: 500;
     font-size: 18px;
     line-height: 27px;
-    color: #ff7158;
+    color: #969090;
     margin-bottom: 10px;
-
 }
 .page-details .store-gallery {
     margin-bottom: 20px;
@@ -11882,7 +11879,7 @@ footer p {
 
 .component-products .products-price {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 20px;
     color: #ff7158;
 }
 
