--- a/public/style/main.css
+++ b/public/style/main.css
@@ -4901,7 +4901,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #007bff;
+    background-color: #00ffb3;
 }
 
 .nav-fill .nav-item {
