--- a/public/style/main.css
+++ b/public/style/main.css
@@ -11995,6 +11995,31 @@ footer p {
     background-color: #428bca;
 }
 
+.tabs .nav-pills-regist > li > a {
+  border-radius: 4px;
+  padding: 5px 15px;
+  color: black;
+}
+
+.tabs .nav-pills-regist > li > a:hover {
+    background-color: whitesmoke;
+    text-decoration: none;
+    padding: 6px 15px 6px 15px;
+}
+
+.tabs .nav-pills-regist > li.active > a {
+    border-radius: 4px;
+    background-color: #adb5bd;
+    color: black;
+    font-size: larger;
+    font-weight: 600;
+}
+
+.tabs .nav-pills-regist > li.active > a:hover {
+    border-radius: 4px;
+    background-color: #adb5bd;
+}
+
 .more {
     display: none;
 }
