--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,22 @@ body {
     font-family: "Nunito Sans", sans-serif;
     -webkit-font-smoothing: antialiased;
 }
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 15px;
+}
+.card:hover{
+ box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
 
 h1,
 h2,
@@ -506,6 +522,38 @@ ol {
 .header__nav__option {
     text-align: right;
     padding: 30px 0;
+}
+.header__nav__option ul li .dropdown {
+	position: absolute;
+	left: 0;
+	top: 56px;
+	width: 150px;
+	background: #111111;
+	text-align: left;
+	padding: 5px 0;
+	z-index: 9;
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: all, 0.3s;
+	-o-transition: all, 0.3s;
+	transition: all, 0.3s;
+}
+
+.header__nav__option ul li .dropdown li {
+	display: block;
+	margin-right: 0;
+}
+
+.header__nav__option ul li .dropdown li a {
+	font-size: 14px;
+	color: #ffffff;
+	font-weight: 400;
+	padding: 5px 20px;
+	text-transform: capitalize;
+}
+
+.header__nav__option ul li .dropdown li a:after {
+	display: none;
 }
 
 .header__nav__option a {
