--- a/public/css/style.css
+++ b/public/css/style.css
@@ -336,7 +336,7 @@ ol {
 }
 
 .header__top {
-    background: #3774cf;
+    background: #111111;
     padding: 10px 0;
 }
 
@@ -509,7 +509,7 @@ ol {
     bottom: 0;
     width: 100%;
     height: 2px;
-    background: #facc02;
+    background: #e53637;
     content: "";
     -webkit-transition: all, 0.5s;
     -o-transition: all, 0.5s;
@@ -1141,7 +1141,7 @@ ol {
 }
 
 .product__item__text h5 {
-    color: #ff7158;
+    color: #0d0d0d;
     font-weight: 700;
 }
 
@@ -1991,11 +1991,7 @@ ol {
 -----------------------*/
 
 .footer {
-    background-color: #dff800;
-    background-image: linear-gradient(189deg, #3774cf 39%, #8cb4e2 100%);
-    background-position: center center;
-    background-repeat: no-repeat;
-    border-width: 1px 0px 0px 0px;
+    background: #111111;
     padding-top: 70px;
 }
 
@@ -2012,7 +2008,7 @@ ol {
 }
 
 .footer__about p {
-    color: #ffff;
+    color: #b7b7b7;
     margin-bottom: 30px;
 }
 
@@ -2035,12 +2031,12 @@ ol {
 }
 
 .footer__widget ul li a {
-    color: #faebaa;
+    color: #b7b7b7;
     font-size: 15px;
 }
 
 .footer__widget .footer__newslatter p {
-    color: #faebaa;
+    color: #b7b7b7;
 }
 
 .footer__widget .footer__newslatter form {
