--- a/public/style/main.css
+++ b/public/style/main.css
@@ -11804,13 +11804,12 @@ body {
 }
 
 .component-products .products-thumbnail {
-    width: 250px;
-    height: 200px;
+    width: 100%;
+    height: 150px;
     border-radius: 8px;
     overflow: hidden;
     position: relative;
     z-index: 1;
-    margin-right: 10px;
 }
 
 .component-products .products-thumbnail:hover .products-image,
@@ -12006,15 +12005,6 @@ body {
     min-height: 11rem;
 }
 .product__details__pic {
-    width: 680px;
-    text-align: center;
-    margin: auto;
-    padding: 40px 0px;
-    justify-content: center;
-    margin-bottom: 30px;
-}
-.product__details__ukuran {
-
     text-align: center;
     background: #f3f2ee;
     padding: 40px 0 40px;
@@ -12380,7 +12370,7 @@ body {
 }
 .product__details__tab__profile {
     padding-top: 0;
-
+    padding-bottom: 30px;
 }
 .product__details__tab__profile .nav-tabs {
     border-bottom: 1px solid #e5e5e5;
@@ -12439,7 +12429,7 @@ body {
 }
 
 .product__details__tab__profile__content__item p {
-    margin-bottom: 0;
+    margin-bottom: 0;   
 }
 .product__details__tab .nav-tabs {
     border-bottom: 1px solid #e5e5e5;
@@ -12471,7 +12461,7 @@ body {
 }
 
 .product__details__tab__content {
-    padding-top: 20px;
+    padding-top: 35px;
 }
 
 .note {
@@ -12505,6 +12495,7 @@ body {
 -----------------------*/
 
 .breadcrumb-option {
+    background: #f3f2ee;
     padding: 40px 0;
 }
 
@@ -12923,12 +12914,9 @@ body {
 -----------------------*/
 
 .footer {
-    background-color: #dff800;
-    background-image: linear-gradient(189deg, #3774cf 39%, #8cb4e2 100%);
-    background-position: center center;
-    background-repeat: no-repeat;
-    border-width: 1px 0px 0px 0px;
+    background: #111111;
     padding-top: 70px;
+    margin-top: 70px;
 }
 
 .footer__about {
@@ -12944,7 +12932,7 @@ body {
 }
 
 .footer__about p {
-    color: #ffffff;
+    color: #b7b7b7;
     margin-bottom: 30px;
 }
 
@@ -12970,7 +12958,7 @@ body {
 }
 
 .footer__widget ul li a {
-    color: #faebaa;
+    color: #b7b7b7;
     margin-left: 0px;
     margin-right: 0px;
     padding-left: 0px;
@@ -12978,7 +12966,7 @@ body {
 }
 
 .footer__widget .footer__newslatter p {
-    color: #faebaa;
+    color: #b7b7b7;
 }
 
 .footer__widget .footer__newslatter form {
@@ -13539,11 +13527,11 @@ ol {
 -----------------------*/
 
 .header {
-    background: none;
+    background: #ffffff;
 }
 
 .header__top {
-    background: #3774cf;
+    background: #111111;
     padding: 10px 0;
 }
 
@@ -13716,7 +13704,7 @@ ol {
     bottom: 0;
     width: 100%;
     height: 2px;
-    background: #facc02;
+    background: #e53637;
     content: "";
     -webkit-transition: all, 0.5s;
     -o-transition: all, 0.5s;
@@ -14199,17 +14187,11 @@ ol {
 }
 
 .product__item__pic {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: #ddd;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+    object-fit: cover;
 }
 
 .product__item__pic .label {
@@ -14323,7 +14305,7 @@ ol {
 }
 
 .product__item__text h5 {
-    color: #ff7158;
+    color: #0d0d0d;
     font-weight: 700;
 }
 
@@ -14740,6 +14722,7 @@ ol {
 .product__details__pic {
     text-align: center;
     justify-content: center;
+    background: #f3f2ee;
     padding: 40px 0 60px;
     margin-bottom: 30px;
 }
@@ -15124,7 +15107,7 @@ ol {
 }
 
 .product__details__tab__content {
-    padding-top: 20px;
+    padding-top: 35px;
 }
 
 .note {
@@ -15174,12 +15157,8 @@ ol {
 -----------------------*/
 
 .footer {
+    background: #111111;
     padding-top: 70px;
-    background-color: #dff800;
-    background-image: linear-gradient(189deg, #3774cf 39%, #8cb4e2 100%);
-    background-position: center center;
-    background-repeat: no-repeat;
-    border-width: 1px 0px 0px 0px;
 }
 
 .footer__about {
@@ -15195,7 +15174,7 @@ ol {
 }
 
 .footer__about p {
-    color: #ffec41;
+    color: #b7b7b7;
     margin-bottom: 30px;
 }
 
@@ -15218,12 +15197,12 @@ ol {
 }
 
 .footer__widget ul li a {
-    color: #faebaa;
+    color: #b7b7b7;
     font-size: 15px;
 }
 
 .footer__widget .footer__newslatter p {
-    color: #faebaa;
+    color: #b7b7b7;
 }
 
 .footer__widget .footer__newslatter form {
@@ -15295,6 +15274,7 @@ ol {
 -----------------------*/
 
 .breadcrumb-option {
+    background: #f3f2ee;
     padding: 40px 0;
 }
 
@@ -15756,6 +15736,7 @@ ol {
 }
 
 .cart__total {
+    background: #f3f2ee;
     padding: 0px 0px 0px;
 }
 
@@ -17350,6 +17331,7 @@ ol {
 }
 
 .cart__total {
+    background: #f3f2ee;
     padding: 0px 40px 40px;
 }
 
@@ -17592,17 +17574,9 @@ ol {
     float: right;
 }
 .image-content {
+    border: solid;
     height: 100%;
     width: 100%;
-}
-.image-content-list {
-    width: 250px;
-    height: 200px;
-    border-radius: 8px;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
-    margin-right: 10px;
 }
 .image-box {
     width: 300px;
