--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4789,7 +4789,7 @@ fieldset:disabled .btn {
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: rgb(88, 133, 255);
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
@@ -5389,7 +5389,6 @@ fieldset:disabled .btn {
     padding: 0.5rem 1rem;
     color: #212529;
     text-decoration: none;
-    background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .list-group-item:first-child {
