--- a/public/style/main.css
+++ b/public/style/main.css
@@ -5428,7 +5428,7 @@ input[type="button"].btn-block {
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: rgb(60, 167, 255);
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
@@ -5461,6 +5461,14 @@ input[type="button"].btn-block {
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     min-height: 1px;
+    padding: 1.25rem;
+}
+.card-body-dashboard {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    min-height: 1px;
+
     padding: 1.25rem;
 }
 
@@ -11273,7 +11281,7 @@ body {
     text-align: center;
     background: #29a867;
     color: #fefefe;
-    margin-left: -10px;
+    margin-left: 10px;
 }
 
 .navbar-fixed-top.scrolled {
@@ -11738,7 +11746,8 @@ body {
 .page-dashboard .section-content .gallery-container .delete-gallery {
     display: block;
     position: absolute;
-    top: -10px;
+    top: -1px;
+    left: -2;
     right: 0;
 }
 
@@ -11804,12 +11813,13 @@ body {
 }
 
 .component-products .products-thumbnail {
-    width: 100%;
-    height: 150px;
+    width: 250px;
+    height: 250px;
     border-radius: 8px;
     overflow: hidden;
     position: relative;
     z-index: 1;
+    margin-right: 10px;
 }
 
 .component-products .products-thumbnail:hover .products-image,
@@ -11877,7 +11887,7 @@ body {
 }
 
 .card-dashboard-product .card-body {
-    padding: 13px;
+    border-radius: 10px;
 }
 
 .card-dashboard-product .card-body .product-title {
@@ -11887,9 +11897,9 @@ body {
 }
 
 .card-dashboard-product .card-body .product-category {
-    font-size: 16px;
+    font-size: 12px;
     line-height: 24px;
-    color: #0e0d0d;
+    color: #797777;
 }
 
 .slide-fade-enter-active {
@@ -12005,13 +12015,19 @@ body {
     min-height: 11rem;
 }
 .product__details__pic {
+    width: 680px;
+    text-align: center;
+    margin: auto;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.product__details__ukuran {
     text-align: center;
     background: #f3f2ee;
     padding: 40px 0 40px;
     justify-content: center;
     margin-bottom: 30px;
 }
-
 .product__details__pic .nav-tabs {
     border-bottom: none;
     width: 105px;
@@ -12370,7 +12386,6 @@ body {
 }
 .product__details__tab__profile {
     padding-top: 0;
-    padding-bottom: 30px;
 }
 .product__details__tab__profile .nav-tabs {
     border-bottom: 1px solid #e5e5e5;
@@ -12389,7 +12404,7 @@ body {
 
 .product__details__tab__profile .nav-tabs .nav-item .nav-link {
     font-size: 20px;
-    color: #111111;
+    color: #3774cf;
     padding: 0;
     border: none;
     font-weight: 700;
@@ -12429,7 +12444,7 @@ body {
 }
 
 .product__details__tab__profile__content__item p {
-    margin-bottom: 0;   
+    margin-bottom: 0;
 }
 .product__details__tab .nav-tabs {
     border-bottom: 1px solid #e5e5e5;
@@ -12461,7 +12476,7 @@ body {
 }
 
 .product__details__tab__content {
-    padding-top: 35px;
+    padding-top: 20px;
 }
 
 .note {
@@ -12481,7 +12496,7 @@ body {
 }
 
 .product__details__tab__content__item h5 {
-    color: #111111;
+    color: #ff7158;
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 12px;
@@ -12495,7 +12510,6 @@ body {
 -----------------------*/
 
 .breadcrumb-option {
-    background: #f3f2ee;
     padding: 40px 0;
 }
 
@@ -12610,7 +12624,7 @@ body {
 }
 
 .shop__sidebar__accordion .card-heading a {
-    color: #111111;
+    color: #ff7158;
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
@@ -12908,15 +12922,27 @@ body {
     display: inline-block;
     padding: 14px 30px;
 }
-
+.tutup-btn {
+    font-size: 14px;
+    color: #ffffff;
+    background: #f54c19;
+    font-weight: 700;
+    border: none;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 14px 30px;
+}
 /*---------------------
   Footer
 -----------------------*/
 
 .footer {
-    background: #111111;
+    background-color: #dff800;
+    background-image: linear-gradient(189deg, #3774cf 39%, #8cb4e2 100%);
+    background-position: center center;
+    background-repeat: no-repeat;
+    border-width: 1px 0px 0px 0px;
     padding-top: 70px;
-    margin-top: 70px;
 }
 
 .footer__about {
@@ -12932,7 +12958,7 @@ body {
 }
 
 .footer__about p {
-    color: #b7b7b7;
+    color: #ffffff;
     margin-bottom: 30px;
 }
 
@@ -12958,7 +12984,7 @@ body {
 }
 
 .footer__widget ul li a {
-    color: #b7b7b7;
+    color: #faebaa;
     margin-left: 0px;
     margin-right: 0px;
     padding-left: 0px;
@@ -12966,7 +12992,7 @@ body {
 }
 
 .footer__widget .footer__newslatter p {
-    color: #b7b7b7;
+    color: #faebaa;
 }
 
 .footer__widget .footer__newslatter form {
@@ -13527,11 +13553,11 @@ ol {
 -----------------------*/
 
 .header {
-    background: #ffffff;
+    background: none;
 }
 
 .header__top {
-    background: #111111;
+    background: #3774cf;
     padding: 10px 0;
 }
 
@@ -13690,8 +13716,8 @@ ol {
 }
 
 .header__menu ul li a {
-    font-size: 18px;
-    color: #111111;
+    font-size: 20px;
+    color: #000000;
     display: block;
     font-weight: 600;
     position: relative;
@@ -13704,7 +13730,7 @@ ol {
     bottom: 0;
     width: 100%;
     height: 2px;
-    background: #e53637;
+    background: #facc02;
     content: "";
     -webkit-transition: all, 0.5s;
     -o-transition: all, 0.5s;
@@ -14156,6 +14182,7 @@ ol {
 
 .product__item.sale .product__item__pic .label {
     color: #ffffff;
+
     background: #111111;
 }
 
@@ -14187,11 +14214,17 @@ ol {
 }
 
 .product__item__pic {
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    background-color: #ddd;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 .product__item__pic .label {
@@ -14265,6 +14298,39 @@ ol {
     display: inline-block;
 }
 
+.products-text-profile {
+    padding-top: 25px;
+    position: relative;
+}
+
+.products-text-profile a {
+    font-size: 15px;
+    color: #e53637;
+    font-weight: 700;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    transition: all, 0.3s;
+}
+
+.products-text-profile h6 {
+    color: #111111;
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: 5px;
+    -webkit-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    transition: all, 0.3s;
+}
+.products-text-profile h5 {
+    color: #ff7158;
+    font-weight: 700;
+}
+
 .product__item__text {
     padding-top: 25px;
     position: relative;
@@ -14305,7 +14371,7 @@ ol {
 }
 
 .product__item__text h5 {
-    color: #0d0d0d;
+    color: #ff7158;
     font-weight: 700;
 }
 
@@ -14722,7 +14788,7 @@ ol {
 .product__details__pic {
     text-align: center;
     justify-content: center;
-    background: #f3f2ee;
+
     padding: 40px 0 60px;
     margin-bottom: 30px;
 }
@@ -15094,7 +15160,7 @@ ol {
 
 .product__details__tab .nav-tabs .nav-item .nav-link {
     font-size: 20px;
-    color: #b7b7b7;
+    color: #3774cf;
     padding: 0;
     border: none;
     font-weight: 700;
@@ -15103,11 +15169,12 @@ ol {
 }
 
 .product__details__tab .nav-tabs .nav-item .nav-link.active {
-    border-bottom: 2px solid #e53637;
+    border-bottom: 2px solid #fed700;
 }
 
 .product__details__tab__content {
-    padding-top: 35px;
+    padding-top: 20px;
+    width: 880px;
 }
 
 .note {
@@ -15157,8 +15224,12 @@ ol {
 -----------------------*/
 
 .footer {
-    background: #111111;
     padding-top: 70px;
+    background-color: #dff800;
+    background-image: linear-gradient(189deg, #3774cf 39%, #8cb4e2 100%);
+    background-position: center center;
+    background-repeat: no-repeat;
+    border-width: 1px 0px 0px 0px;
 }
 
 .footer__about {
@@ -15174,7 +15245,7 @@ ol {
 }
 
 .footer__about p {
-    color: #b7b7b7;
+    color: #ffec41;
     margin-bottom: 30px;
 }
 
@@ -15197,12 +15268,12 @@ ol {
 }
 
 .footer__widget ul li a {
-    color: #b7b7b7;
+    color: #faebaa;
     font-size: 15px;
 }
 
 .footer__widget .footer__newslatter p {
-    color: #b7b7b7;
+    color: #faebaa;
 }
 
 .footer__widget .footer__newslatter form {
@@ -15274,12 +15345,11 @@ ol {
 -----------------------*/
 
 .breadcrumb-option {
-    background: #f3f2ee;
     padding: 40px 0;
 }
 
 .breadcrumb__text h4 {
-    color: #111111;
+    color: #293d94;
     font-weight: 700;
     margin-bottom: 8px;
 }
@@ -15736,7 +15806,6 @@ ol {
 }
 
 .cart__total {
-    background: #f3f2ee;
     padding: 0px 0px 0px;
 }
 
@@ -17331,7 +17400,6 @@ ol {
 }
 
 .cart__total {
-    background: #f3f2ee;
     padding: 0px 40px 40px;
 }
 
@@ -17574,9 +17642,17 @@ ol {
     float: right;
 }
 .image-content {
-    border: solid;
     height: 100%;
     width: 100%;
+}
+.image-content-list {
+    height: 250px;
+    width: 250px;
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    margin-right: 10px;
 }
 .image-box {
     width: 300px;
@@ -17586,9 +17662,18 @@ ol {
     justify-content: center;
     object-fit: cover;
 }
+.image-box-product {
+    width: 250px;
+    height: 250px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    object-fit: cover;
+}
 .image-detail {
     width: 500px;
     height: 500px;
+    border-radius: 8px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -17597,6 +17682,7 @@ ol {
 .image-detail-row {
     width: 100px;
     height: 100px;
+    border-radius: 8px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -17606,4 +17692,26 @@ ol {
     color: #ffffff;
     text-decoration: none;
     background-color: transparent;
+}
+
+.card-product {
+    width: 320px;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: rgb(60, 167, 255);
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
+}
+.box-profile h3 {
+    color: #e53637;
+    margin-bottom: 15px;
 }
