--- a/public/sass/_breadcrumb.scss
+++ b/public/sass/_breadcrumb.scss
@@ -2,12 +2,10 @@
   Breadcrumb
 -----------------------*/
 .breadcrumb-option {
-    background: #f3f2ee;
     padding: 40px 0;
 }
 
 .breadcrumb__text {
-
     h4 {
         color: $heading-color;
         font-weight: 700;
@@ -16,7 +14,6 @@
 }
 
 .breadcrumb__links {
-
     a {
         font-size: 15px;
         color: $heading-color;
@@ -28,7 +25,7 @@
             position: absolute;
             right: -14px;
             top: 0;
-            content: '\f105';
+            content: "\f105";
             font-family: "FontAwesome";
         }
     }
