--- a/public/sass/_shop-details.scss
+++ b/public/sass/_shop-details.scss
@@ -3,14 +3,13 @@
 -----------------------*/
 .product__details__pic {
     text-align: center;
-    background: #f3f2ee;
     padding: 40px 0 60px;
     margin-bottom: 100px;
 
     .nav-tabs {
         border-bottom: none;
         width: 105px;
-        
+
         .nav-item {
             margin-bottom: 10px;
 
@@ -45,7 +44,8 @@
         }
     }
 
-    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    .nav-tabs .nav-item.show .nav-link,
+    .nav-tabs .nav-link.active {
         background-color: transparent;
         border-color: transparent;
     }
@@ -65,7 +65,7 @@
             position: absolute;
             right: -14px;
             top: 0;
-            content: '\f105';
+            content: "\f105";
             font-family: "FontAwesome";
         }
     }
@@ -204,23 +204,23 @@
         margin-bottom: 0;
         display: inline-block;
         cursor: pointer;
-        
+
         &.c-1 {
             background: #0b090c;
         }
-        
+
         &.c-2 {
             background: #20315f;
         }
-        
+
         &.c-3 {
             background: #f1af4d;
         }
-        
+
         &.c-4 {
             background: #ed1c24;
         }
-        
+
         &.c-9 {
             background: #ffffff;
         }
@@ -266,7 +266,6 @@
                 border: none;
             }
 
-
             .qtybtn {
                 font-size: 18px;
                 color: #0d0d0d;
@@ -305,14 +304,13 @@
 }
 
 .product__details__last__option {
-
     h5 {
         color: $heading-color;
         font-weight: 700;
         font-size: 20px;
         position: relative;
         margin-bottom: 26px;
-        
+
         span {
             background: $white-color;
             padding: 0 30px;
