--- a/public/style/main.css
+++ b/public/style/main.css
@@ -11237,7 +11237,7 @@ body {
 }
 
 .form-control {
-    background-color: #e2b1b1;
+    background-color: #f2f2f2;
 }
 
 .navbar-store {
@@ -28904,7 +28904,7 @@ body {
 }
 
 .form-control {
-    background-color: #e2b1b1;
+    background-color: #f2f2f2;
 }
 
 .navbar-store {
